# CHANGELOG
##############


Version 0.4.*: 
------------
30: Added option to provide arbitrary named self-provided assemblies.
29: tmp folder for samtools sort adjusted to add sample_id and library_id
28: --keep-going removed from default run script
27: Critical bugfix in preprocess__bowtie2__extract_nonhost_run (crashed workflow)
26: Reversed change number 24
25: Option to provide an own, existing assembly added to the Assembler module
24: Added 'phyloflash' to Phyloflash output file, to avoid potential temp file mixups between tools
23: Improved decontamination avoiding misclassified singletons
22: Added HMMER to contig_annotate and set HydDB as starting db (issue #19)
21: Database files are now copied to avoid accidental overwriting during parallele execution (issue #18)
20: Added HydDB option as additional standard Diamond search database (issue #19)
19: Stand-alone contig_annotate__eggnog throws an error, due to an missing f-string (issue #24) 
18: Included the FastQC module for the preprocess fastqs
17: Updated the default database for Phyloflash to Silva 138.2
16: Updated the read_annotate/phyloflash docker image (downgrade spades 3.15.* to 3.14.1, spades froze often in 3.15.*)
15: Accidental overwriting of camper results and db fixed (copying removed for now, issue #18)
14: Added camper to mag_annotate from dram output
13: Output path bug in dram_mag fixed
12: Output path adjusted for phylophlan result (phylophlan.tsv.tsv -> phylophlan.tsv)
11: A few remaining proteinortho output files are now copied also the proteinortho output folde
10: Critial typo fixed in mag_annotate__phylophlan (issue #23)
9: Changed magscot rules so that also empty output is taken now into consideration and does not throw an error anymore (issue #22)
8: Output bugfix in Phyophlan (two arguments, unnamed)
7: Bugfix that prevented Kraken2 from copying db files to faster disc spaces
6: Removed a non-public referene database (ciliates) from features.yaml (issue #17)