@@ -7,7 +7,7 @@ import yaml
 import os
 
 DEBUG = True
-version = "0.4.30"
+version = "0.4.32"
 
 def debug(msg):
     if DEBUG:
